	* Fixed creating top-level albums in some cases.
	* Fixed logging out.
	* Can now create a first album when no Album is available.
	* Removed the Username and password fields in MainFrame.
	* Preferences can be invoked in such a way that it jumps
	  to a panel immediately.
	* Fixed losing caption when selecting more than one picture.
	* Fixed drag-n-dropping folders.
	* Unhacked list selection.

2003-06-12  Pierre-Luc Paour <gallery@paour.com> (1.1-b3)

	* Preference property names are now constants in PreferenceNames rather
	  than just text litterals.
	* Added proxy support in the preferences.
	* Explicit HTTPS support (see the ReadMe).
	* Optionally strips the extension when using filename for caption.

2003-06-04  Pierre-Luc Paour <gallery@paour.com> (1.1-b2)

	* Added Upload, URLs, Proxy prefs panel.
	* Time in the logs is now in ms since application launch.
	* Sorted preferences files, for better readability.
	* Now pre-loading thumbnails and accurate file size when opening
	  saved state.
	* Reworked the Gallery class for more consistency and robustness.
	* Proxy panel is not yet functional.
	* Logging on to a PostNuke-embedded Gallery fails (I need help with this).
	* Fixed dialog centering code.

2003-05-08  Pierre-Luc Paour <gallery@paour.com> (1.1-b1)

	* Added first embryo of a preferences dialog.

2003-05-25  Pierre-Luc Paour <gallery@paour.com> (1.0.1-b6)

	* When an auth error occurs, made the error message more informative.

2003-05-09  Pierre-Luc Paour <gallery@paour.com> (1.0.1-b5)

	* No changes, just updated the automated build system to build the 1.0.x
	  branch rather than the new 1.1.x branch.

2003-05-06  Pierre-Luc Paour <gallery@paour.com> (1.0.1-b4)

	* Improved stability of upload when IM is not installed.
	* Optionally HTML-escaping captions and titles during upload.
	* Display captions in the picture list.
	* Save and load ready to upload albums (and save a backup before
	  uploading, in case of a problem).